--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "aB-P6L_c5KvD"
       },
@@ -13,7 +13,6 @@
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import metrics\n",
-        "#from __future__ import print_function\n",
         "import lime\n",
         "import lime.lime_tabular\n",
         "import dill"
@@ -21,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "cI1ykvpO5VFs"
       },
@@ -165,7 +164,7 @@
               "2                         I am not very good   Automotive   EEE  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -185,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -229,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -346,7 +345,7 @@
               "2          0   EEE  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -357,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -374,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,14 +383,14 @@
       },
       "outputs": [],
       "source": [
-        "svc_model = SVC(C=100, kernel='poly', degree=3, gamma='auto', probability=True)\n",
+        "svc_model = SVC(C=1, kernel='poly', degree=3, probability=True)\n",
         "svc_model.fit(X_train, y_train)\n",
         "prediction = svc_model.predict(X_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -404,21 +403,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.9821428571428571\n",
-            "f1_score: 0.9821428571428571\n",
+            "Accuracy: 0.945054945054945\n",
+            "f1_score: 0.945054945054945\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "         BME       0.98      1.00      0.99        56\n",
-            "       CIVIL       0.97      0.99      0.98       145\n",
-            "         CSE       0.99      0.99      0.99       143\n",
-            "         ECE       1.00      0.98      0.99       129\n",
-            "         EEE       0.97      0.99      0.98       101\n",
-            "        MECH       0.99      0.95      0.97       154\n",
+            "         BME       0.98      1.00      0.99        64\n",
+            "       CIVIL       0.91      0.98      0.94       141\n",
+            "         CSE       0.98      0.91      0.94       143\n",
+            "         ECE       0.94      0.97      0.96       135\n",
+            "         EEE       0.94      0.89      0.91       119\n",
+            "        MECH       0.94      0.94      0.94       126\n",
             "\n",
-            "    accuracy                           0.98       728\n",
-            "   macro avg       0.98      0.98      0.98       728\n",
-            "weighted avg       0.98      0.98      0.98       728\n",
+            "    accuracy                           0.95       728\n",
+            "   macro avg       0.95      0.95      0.95       728\n",
+            "weighted avg       0.95      0.95      0.94       728\n",
             "\n"
           ]
         }
@@ -437,20 +436,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "PSh-nFfsDfu3"
       },
       "outputs": [],
       "source": [
-        "predict_fn_rf = lambda x: svc_model.predict_proba(x).astype(float)\n",
         "xt = feature.values\n",
         "explainer = lime.lime_tabular.LimeTabularExplainer(xt,feature_names = X_train.columns,mode=\"classification\",class_names=['BME','CIVIL','CSE','ECE','EEE','MECH'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
